apps/hello-world/gateway-api-objects.yaml
# Gateway with HTTP redirection
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: hello-world-gateway
spec:
  gatewayClassName: cilium
  listeners:
  - name: http
    protocol: HTTP
    port: 80
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - name: wildcard-example-local-tls

---
# HTTPRoute for redirecting HTTP to HTTPS
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-filter-redirect
spec:
  parentRefs:
  - name: hello-world-gateway
    sectionName: http
  hostnames:
  - hello-world.example.com
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301

---
# HTTPRoute for handling HTTPS traffic
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-route
  labels:
    gateway: hello-world-gateway
spec:
  parentRefs:
  - name: hello-world-gateway
    sectionName: https
  hostnames:
  - hello-world.example.com
  rules:
  - backendRefs:
    - name: hello-world-app
      port: 80
